fixed fixed not showing on today, now it shows

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -274,8 +274,7 @@ body, html {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    background-color: #4ee58b;
-    background-color: var(--green);
+    background-color: #4ee58bd1;
     bottom: 0;
     color: #231f20;
     color: var(--grey);
